# declarative-plasmoids

./: CMakeLists.txt
dictionary/: CMakeLists.txt  plasma-applet-dictionary-qml.desktop
dictionary/package/: metadata.desktop
dictionary/package/contents/ui/: config.ui  main.qml
knowledgebase/: plasma-applet-knowledgebase-qml.desktop
knowledgebase/package/: metadata.desktop
knowledgebase/package/contents/ui/: main.qml
microblog/: CMakeLists.txt  active-microblog  active-microblog.desktop  metadata.desktop  microblog-tablet  plasma-applet-microblog-qml.desktop
microblog/contents/code/: logic.js
microblog/contents/config/: main.xml
microblog/contents/ui/: ListItem.qml  MessageWidget.qml  PostingWidget.qml  config.ui  main.qml
microblog/contents/ui/BasicComponents/: AuthorizationWidget.qml  ListItem.qml  MessageWidget.qml  PostingWidget.qml  qmldir
microblog/contents/ui/ComplexComponents/: AccountDelegate.qml  Accounts.qml  AuthorizationWidget.qml  Avatar.qml  LoginWidget.qml  MessageDetails.qml  MessageList.qml  MessageListHeader.qml  MessageSearchList.qml  MessageWidget.qml  PostingWidget.qml  ServiceJobButton.qml  SideBar.qml  UserInfo.qml  qmldir
microblog/contents/ui/MainWidget/: MainWidget.qml  qmldir
microblog/platformcontents/application/generic/images/: listitem.svgz  shadow.svgz
microblog/platformcontents/application/generic/ui/BasicComponents/: AuthorizationWidget.qml  ListItem.qml  MessageWidget.qml  PostingWidget.qml  qmldir
microblog/platformcontents/application/tablet/ui/MainWidget/: AccountsPopup.qml  AuthorizationWidget.qml  ConfigWidget.qml  MainWidget.qml  MessageWidgetDetails.qml  qmldir
microblog/test/: dragmodeltest.qml
news/: CMakeLists.txt  active-news-reader.desktop  news-tablet  plasma-applet-news-qml.desktop
news/icons/: hisc-apps-active-news.svgz
news/package/: metadata.desktop
news/package/contents/code/: bookkeeping.js
news/package/contents/config/: main.xml
news/package/contents/ui/: main.qml
news/package/contents/ui/BasicComponents/: ListItem.qml  ListItemEntry.qml  ListItemSource.qml  qmldir
news/package/contents/ui/ComplexComponents/: ArticleView.qml  FeedList.qml  ItemsList.qml  Toolbar.qml  qmldir
news/package/contents/ui/MainUi/: MainUi.qml
news/package/platformcontents/application/generic/ui/BasicComponents/: ListItem.qml  ListItemEntry.qml  ListItemSource.qml
news/package/platformcontents/application/tablet/images/: backgrounds.svgz  listitem.svgz
news/package/platformcontents/application/tablet/ui/: main.qml
news/package/platformcontents/application/tablet/ui/BasicComponents/: ListItem.qml  ListItemEntry.qml  ListItemSource.qml  qmldir
news/package/platformcontents/application/tablet/ui/MainUi/: ConfigWidget.qml  MainUi.qml  TabletToolbar.qml  qmldir
news/package/platformcontents/meego/generic/ui/MeegoComponents/: BrowserPage.qml  FeedList.qml  PostsList.qml
news/package/platformcontents/meego/handheld/ui/: FeedListPage.qml  PostsListPage.qml  main.qml
news/package/platformcontents/meego/tablet/ui/: PostsListPage.qml  main.qml
news/package/platformcontents/touch/ui/BasicComponents/: ListItemEntry.qml  ListItemSource.qml
news/package/platformcontents/touch/ui/MainUi/: ConfigWidget.qml  MainUi.qml  TabletToolbar.qml  qmldir
org.kde.analogclock/: plasma-applet-analog-clock.desktop
org.kde.analogclock/package/: metadata.desktop
org.kde.analogclock/package/contents/ui/: main.qml
rssnow/: CMakeLists.txt  feedsConfig.ui  generalConfig.ui  plasma-applet-rssnow-qml.desktop  plasma-applet-rssnow.desktop  plasma-applet-rssnow2.desktop  rssnow.cpp  rssnow.h
rssnow/package/: metadata.desktop
rssnow/package/contents/code/: bookkeeping.js
rssnow/package/contents/ui/: DropRssEntry.qml  ListItem.qml  ListItemEntry.qml  main.qml
social-news/: CMakeLists.txt  plasma-applet-social-news-qml.desktop
social-news/package/: metadata.desktop
social-news/package/contents/config/: main.xml
social-news/package/contents/ui/: config.ui  main.qml
tasks/: CMakeLists.txt  plasma-applet-tasks.desktop  tasks.cpp  tasks.h
tasks/package/contents/ui/: main.qml
tasks/qml/: CMakeLists.txt  Messages.sh  plasma-applet-tasks-qml.desktop
welcome/package/: metadata.desktop
welcome/package/contents/ui/: main.qml
welcome/package/data/: welcome.rss
